--- a/Example/SKFPicPreview/SKFPicPreview-Info.plist
+++ b/Example/SKFPicPreview/SKFPicPreview-Info.plist
@@ -14,6 +14,12 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
+    <key>NSCameraUsageDescription</key>
+    <string>使用相机</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>使用麦克风</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>使用相册</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
